# tbt-parser

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
doc/: bank-select-notes.md  internal.md
exe/: CMakeLists.txt  midi-info.cpp  tbt-converter.cpp  tbt-info.cpp  tbt-printer.cpp
include/: tbt-parser.h
include/common/: abort.h  assert.h  check.h  common.h  file.h  logging.h  platform.h  status.h
include/tbt-parser/: alternate-time-regions.h  bars.h  body.h  metadata.h  midi.h  notes.h  rational.h  tbt-parser-util.h  tbt.h  track-effect-changes.h
lib/: CMakeLists.txt  alternate-time-regions.cpp  alternate-time-regions.inl  bar-lines.inl  bars.cpp  bars.inl  body.cpp  body.inl  expanddeltalist.inl  file.cpp  last-found.inl  metadata.cpp  metadata.inl  midi.cpp  notes.cpp  notes.inl  partitioninto.inl  rational.cpp  splitat.inl  tablature.cpp  tbt-file.cpp  tbt-parser-util.cpp  tbt.cpp  track-effect-changes.cpp  track-effect-changes.inl
test/: CMakeLists.txt  TestLastFound.cpp  TestMidi.cpp  TestRational.cpp  TestTbt.cpp  TestUtil.cpp  black.mid
test/data/: Classical Madness!.mid  Classical Madness!.tbt  Closing Time.mid  Closing Time.tbt  Song Idea.mid  Song Idea.tbt  The Arcane.mid  The Arcane.tbt  [With Intent of Butchery] Decomposing Truth.mid  [With Intent of Butchery] Decomposing Truth.tbt  back.mid  back.tbt  black.tbt  justice-no-tempo-changes.mid  justice-no-tempo-changes.tbt  justice.mid  justice.tbt
